# imtui

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ccpp.yml  ubuntu-18.04.yml
examples/: CMakeLists.txt  imtui-demo.cpp  imtui-demo.h
examples/emscripten0/: CMakeLists.txt  index-tmpl.html  main.cpp  style.css
examples/hnterm/: CMakeLists.txt  README.md  hn-state.cpp  hn-state.h  impl-emscripten.cpp  impl-ncurses.cpp  index-tmpl.html  json.h  main.cpp  style.css
examples/ncurses0/: CMakeLists.txt  main.cpp
examples/slack/: CMakeLists.txt  README.md  index-tmpl.html  logs.h  main.cpp  style.css
include/imtui/: imtui-impl-emscripten.h  imtui-impl-ncurses.h  imtui-impl-text.h  imtui.h
src/: CMakeLists.txt  Makefile  example_emscripten.cpp  example_emscripten.css  example_emscripten.html  example_emscripten_colors.js  example_ncurses0.cpp  example_ncurses1.cpp  imgui_impl_ncurses.cpp  imgui_impl_ncurses.h  imgui_impl_text.cpp  imgui_impl_text.h  imtui-impl-emscripten.cpp  imtui-impl-ncurses.cpp  imtui-impl-text.cpp  imtui_common.h  imtui_demo.cpp  imtui_demo.h  shell_minimal.html  test0.cpp
